--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ fonttools==4.60.1
 kiwisolver==1.4.9
 matplotlib==3.10.7
 numpy==2.2.6
+opencv-python==4.12.0.88
 packaging==25.0
 pandas==2.3.3
 pillow==12.0.0
@@ -12,4 +13,3 @@ python-dateutil==2.9.0.post0
 pytz==2025.2
 six==1.17.0
 tzdata==2025.2
-opencv-python
