--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,71 @@
+altair==6.0.0
+annotated-types==0.7.0
+attrs==25.4.0
+click==8.3.1
+cloudpickle==3.1.2
 contourpy==1.3.2
 cycler==0.12.1
+dask==2025.11.0
+dask-jobqueue==0.9.0
+distributed==2025.11.0
 fonttools==4.60.1
+fsspec==2025.10.0
+ImageIO==2.37.2
+importlib_metadata==8.7.0
+Jinja2==3.1.6
+joblib==1.5.2
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 kiwisolver==1.4.9
+lazy_loader==0.4
+locket==1.0.0
 markdown-it-py==4.0.0
+MarkupSafe==3.0.3
 matplotlib==3.10.7
 mdurl==0.1.2
+msgpack==1.1.2
+narwhals==2.12.0
+nd2==0.10.4
+networkx==3.4.2
 numpy==2.2.6
+ome-types==0.6.2
 opencv-python==4.12.0.88
 packaging==25.0
 pandas==2.3.3
+partd==1.4.2
+patsy==1.0.2
 pillow==12.0.0
+plantcv==4.9
+psutil==7.1.3
+pydantic==2.12.4
+pydantic-extra-types==2.10.6
+pydantic_core==2.41.5
 Pygments==2.19.2
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
+PyYAML==6.0.3
+referencing==0.37.0
+resource-backed-dask-array==0.1.0
 rich==14.2.0
+rpds-py==0.29.0
+scikit-image==0.25.2
+scikit-learn==1.7.2
+scipy==1.15.3
 six==1.17.0
+sortedcontainers==2.4.0
+statsmodels==0.14.5
+tblib==3.2.2
+threadpoolctl==3.6.0
+tifffile==2025.5.10
+toolz==1.1.0
+tornado==6.5.2
+typing-inspection==0.4.2
+typing_extensions==4.15.0
 tzdata==2025.2
+urllib3==2.5.0
+vl-convert-python==1.8.0
+xarray==2025.6.1
+xsdata==25.7
+zict==3.0.0
+zipp==3.23.0
