--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
 __pycache__/
 venv
-data/leaves
-data/leaves.zip
-data/leaves_preprocessed.zip
-data/leaves_test
-data/leaves_test_preprocessed
-data/leaves_preprocessed
+data/leaves*
