--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ rpds-py==0.29.0
 scikit-image==0.25.2
 scikit-learn==1.7.2
 scipy==1.15.3
+seaborn==0.13.2
 six==1.17.0
 sortedcontainers==2.4.0
 statsmodels==0.14.5
