--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-altair==5.0.0rc1
+aiofiles==24.1.0
+altair==5.0.0
+annotated-doc==0.0.4
 annotated-types==0.7.0
+anyio==4.11.0
 attrs==25.4.0
+brotli==1.2.0
+certifi==2025.11.12
 click==8.3.1
 cloudpickle==3.1.2
 contourpy==1.3.2
@@ -8,8 +13,21 @@ cycler==0.12.1
 dask==2025.11.0
 dask-jobqueue==0.9.0
 distributed==2025.11.0
+exceptiongroup==1.3.0
+fastapi==0.121.3
+ffmpy==1.0.0
+filelock==3.20.0
 fonttools==4.60.1
 fsspec==2025.10.0
+gradio==5.49.1
+gradio_client==1.13.3
+groovy==0.1.2
+h11==0.16.0
+hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface_hub==1.1.5
+idna==3.11
 ImageIO==2.37.2
 importlib_metadata==8.7.0
 Jinja2==3.1.6
@@ -30,42 +48,57 @@ networkx==3.4.2
 numpy==2.2.6
 ome-types==0.6.2
 opencv-python==4.12.0.88
+orjson==3.11.4
 packaging==25.0
 pandas==2.3.3
 partd==1.4.2
 patsy==1.0.2
-pillow==12.0.0
+pillow==11.3.0
 plantcv==4.9
 psutil==7.1.3
-pydantic==2.12.4
+pydantic==2.11.10
 pydantic-extra-types==2.10.6
-pydantic_core==2.41.5
+pydantic_core==2.33.2
+pydub==0.25.1
 Pygments==2.19.2
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
+python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.3
 referencing==0.37.0
 resource-backed-dask-array==0.1.0
 rich==14.2.0
 rpds-py==0.29.0
+ruff==0.14.5
+safehttpx==0.1.7
 scikit-image==0.25.2
 scikit-learn==1.7.2
 scipy==1.15.3
 seaborn==0.13.2
+semantic-version==2.10.0
+shellingham==1.5.4
 six==1.17.0
+sniffio==1.3.1
 sortedcontainers==2.4.0
+starlette==0.50.0
 statsmodels==0.14.5
 tblib==3.2.2
 threadpoolctl==3.6.0
 tifffile==2025.5.10
+tomlkit==0.13.3
 toolz==1.1.0
 tornado==6.5.2
+tqdm==4.67.1
+typer==0.20.0
+typer-slim==0.20.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
+uvicorn==0.38.0
 vl-convert-python==1.8.0
+websockets==15.0.1
 xarray==2025.6.1
 xsdata==25.7
 zict==3.0.0
