--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
+absl-py==2.3.1
 aiofiles==24.1.0
 altair==5.0.0
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
+astunparse==1.6.3
 attrs==25.4.0
 brotli==1.2.0
 certifi==2025.11.12
+charset-normalizer==3.4.4
 click==8.3.1
 cloudpickle==3.1.2
 contourpy==1.3.2
@@ -17,12 +20,17 @@ exceptiongroup==1.3.0
 fastapi==0.121.3
 ffmpy==1.0.0
 filelock==3.20.0
+flatbuffers==25.9.23
 fonttools==4.60.1
 fsspec==2025.10.0
+gast==0.6.0
+google-pasta==0.2.0
 gradio==5.49.1
 gradio_client==1.13.3
 groovy==0.1.2
+grpcio==1.76.0
 h11==0.16.0
+h5py==3.15.1
 hf-xet==1.2.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -34,20 +42,27 @@ Jinja2==3.1.6
 joblib==1.5.2
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
+keras==3.12.0
 kiwisolver==1.4.9
 lazy_loader==0.4
+libclang==18.1.1
 locket==1.0.0
+Markdown==3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 matplotlib==3.10.7
 mdurl==0.1.2
+ml_dtypes==0.5.4
 msgpack==1.1.2
+namex==0.1.0
 narwhals==2.12.0
 nd2==0.10.4
 networkx==3.4.2
 numpy==2.2.6
 ome-types==0.6.2
 opencv-python==4.12.0.88
+opt_einsum==3.4.0
+optree==0.18.0
 orjson==3.11.4
 packaging==25.0
 pandas==2.3.3
@@ -55,6 +70,7 @@ partd==1.4.2
 patsy==1.0.2
 pillow==11.3.0
 plantcv==4.9
+protobuf==6.33.1
 psutil==7.1.3
 pydantic==2.11.10
 pydantic-extra-types==2.10.6
@@ -67,6 +83,7 @@ python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.3
 referencing==0.37.0
+requests==2.32.5
 resource-backed-dask-array==0.1.0
 rich==14.2.0
 rpds-py==0.29.0
@@ -84,6 +101,10 @@ sortedcontainers==2.4.0
 starlette==0.50.0
 statsmodels==0.14.5
 tblib==3.2.2
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+tensorflow==2.20.0
+termcolor==3.2.0
 threadpoolctl==3.6.0
 tifffile==2025.5.10
 tomlkit==0.13.3
@@ -99,8 +120,9 @@ urllib3==2.5.0
 uvicorn==0.38.0
 vl-convert-python==1.8.0
 websockets==15.0.1
+Werkzeug==3.1.3
+wrapt==2.0.1
 xarray==2025.6.1
 xsdata==25.7
 zict==3.0.0
 zipp==3.23.0
-tensorflow
