--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ exceptiongroup==1.3.0
 fastapi==0.121.3
 ffmpy==1.0.0
 filelock==3.20.0
+flake8==7.3.0
 flatbuffers==25.9.23
 fonttools==4.60.1
 fsspec==2025.10.0
@@ -51,6 +52,7 @@ Markdown==3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 matplotlib==3.10.7
+mccabe==0.7.0
 mdurl==0.1.2
 ml_dtypes==0.5.4
 msgpack==1.1.2
@@ -73,10 +75,12 @@ plantcv==4.9
 plotly==6.5.0
 protobuf==6.33.1
 psutil==7.1.3
+pycodestyle==2.14.0
 pydantic==2.11.10
 pydantic-extra-types==2.10.6
 pydantic_core==2.33.2
 pydub==0.25.1
+pyflakes==3.4.0
 Pygments==2.19.2
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
